# bear

./: Cargo.toml  README.md
src/: bare_c.rs  main.rs  pcfg.rs  runner.rs  test.rs
src/generator/: context.rs  control_flow.rs  expr.rs  interval.rs  mod.rs  stmt.rs
src/lowering/: flattening.rs  lower_block.rs  lower_stmt.rs  mod.rs
src/search/: mod.rs  trace.rs
support/: Cargo.toml
support/src/: lib.rs
