[package]
name = "bear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg = { path = "../cs6120-bril/cfg" }
atty = "0.2"
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25.0"
support = { path = "./support" }
rand = "0.8.5"
static_assertions = "1.1.0"

[dependencies.clap]
version = "4.4.1"
features = ["derive"]

[dependencies.bril-rs]
version = "0.1.0"
path = "../cs6120-bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position", "char"]


[workspace]
members = ["support"]
